Example project - minor improvements