@@ -7,10 +7,12 @@ import com.giffing.wicket.spring.boot.example.web.pages.websocket.events.JoinCha
 import com.giffing.wicket.spring.boot.example.web.pages.websocket.events.LeftChatEvent;
 import com.giffing.wicket.spring.boot.starter.web.servlet.websocket.WebSocketMessageBroadcaster;
 import de.agilecoders.wicket.jquery.JQuery;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.ajax.markup.html.form.AjaxButton;
 import org.apache.wicket.authroles.authorization.strategies.role.annotations.AuthorizeInstantiation;
-import org.apache.wicket.markup.head.CssReferenceHeaderItem;
+import org.apache.wicket.markup.head.CssHeaderItem;
 import org.apache.wicket.markup.head.IHeaderResponse;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
@@ -35,7 +37,6 @@ import org.wicketstuff.annotation.mount.MountPath;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @MountPath("chat")
 @AuthorizeInstantiation("USER")
@@ -50,32 +51,28 @@ public class ChatPage extends BaseAuthenticatedPage {
     private WebMarkupContainer chatMessageContainer;
     private ListView<ChatMessage> messages;
 
-    RequiredTextField<String> messageInput;
+    private RequiredTextField<String> messageInput;
 
-    private DropDownChoice participantChoice;
+    private DropDownChoice<String> participantChoice;
 
     public ChatPage(PageParameters pageParameters) {
         super(pageParameters);
-        FeedbackPanel feedbackPanel = new FeedbackPanel("feedback");
-        feedbackPanel.setOutputMarkupId(true);
-        add(feedbackPanel);
+        add(new FeedbackPanel("feedback").setOutputMarkupId(true));
+        addWebsocketBehaviour();
         addChatForm();
-        addWebsocketBehaviour(feedbackPanel);
     }
 
     private void addChatForm() {
         IModel<String> to = Model.of("");
         IModel<String> message = Model.of("");
-        Form form = null;
-        add(form = new Form<>("form"));
-        form.add(participantChoice = new DropDownChoice<>("participants", to, () -> chatService
-                .getParticipants()
-                .stream().collect(Collectors.toList())));
+
+        var form = new Form<Void>("form");
+
+        participantChoice = new DropDownChoice<>("participants", to, () -> chatService.getParticipants().stream().toList());
         participantChoice.setOutputMarkupId(true);
+
         messageInput = new RequiredTextField<>("message", message);
         messageInput.setOutputMarkupId(true);
-
-        form.add(messageInput);
         AjaxButton submitButton = new AjaxButton("submit") {
 
             @Override
@@ -88,7 +85,7 @@ public class ChatPage extends BaseAuthenticatedPage {
 
         };
         form.setDefaultButton(submitButton);
-        form.add(submitButton);
+
 
         messages = new ListView<>("messages", new ArrayList<>()) {
 
@@ -101,15 +98,22 @@ public class ChatPage extends BaseAuthenticatedPage {
             }
         };
         messages.setOutputMarkupId(true);
-        form.add(chatMessageContainer = new WebMarkupContainer("chatMessageContainer"));
+
+        chatMessageContainer = new WebMarkupContainer("chatMessageContainer");
         chatMessageContainer.setOutputMarkupId(true);
         chatMessageContainer.add(messages);
+
+        add(form);
+        form.add(submitButton);
+        form.add(participantChoice);
+        form.add(messageInput);
+        form.add(chatMessageContainer);
     }
 
-    private void addWebsocketBehaviour(FeedbackPanel feedbackPanel) {
-        String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
-        String browserTabIdentifier = UUID.randomUUID().toString();
-        ChatParticipant chatParticipant = new ChatParticipant(browserTabIdentifier, currentUsername);
+    private void addWebsocketBehaviour() {
+        var currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+        var browserTabIdentifier = UUID.randomUUID().toString();
+        var chatParticipant = new ChatParticipant(browserTabIdentifier, currentUsername);
         add(new WebSocketBehavior() {
 
             @Override
@@ -119,14 +123,14 @@ public class ChatPage extends BaseAuthenticatedPage {
                     handler.add(chatMessageContainer);
                 }
                 if (message instanceof JoinChatEvent event) {
-                    String notifyStatus = "success";
-                    String notifyMessage = event.getUsername() + " joined the chat";
+                    var notifyStatus = "success";
+                    var notifyMessage = "%s joined the chat".formatted(event.getUsername());
                     addNotifyMessage(handler, notifyStatus, notifyMessage);
                     handler.add(participantChoice);
                 }
                 if (message instanceof LeftChatEvent event) {
                     String notifyStatus = "warning";
-                    String notifyMessage = event.getUsername() + " left the chat";
+                    String notifyMessage = "%s left the chat".formatted(event.getUsername());
                     addNotifyMessage(handler, notifyStatus, notifyMessage);
                     handler.add(participantChoice);
                 }
@@ -134,14 +138,16 @@ public class ChatPage extends BaseAuthenticatedPage {
 
             private void addNotifyMessage(WebSocketRequestHandler handler, String notifyStatus, String notifyMessage) {
                 handler.appendJavaScript(JQuery
-                        .plain("noty({text: '" + notifyMessage + "', type: '" + notifyStatus
-                                + "', timeout: '5000', progressbar: true});"));
+                        .plain("noty({text: '%s', type: '%s', timeout: '5000', progressbar: true});"
+                                .formatted(notifyMessage, notifyStatus)));
             }
 
+            @Override
             protected void onConnect(ConnectedMessage message) {
                 chatService.join(chatParticipant);
             }
 
+            @Override
             protected void onClose(ClosedMessage message) {
                 chatService.leave(chatParticipant);
             }
@@ -149,29 +155,17 @@ public class ChatPage extends BaseAuthenticatedPage {
         });
     }
 
+    @Getter
+    @RequiredArgsConstructor
     private static class ChatMessage implements Serializable {
         private final String from;
         private final String message;
-
-        public ChatMessage(String from, String message) {
-            this.from = from;
-            this.message = message;
-        }
-
-        public String getFrom() {
-            return from;
-        }
-
-        public String getMessage() {
-            return message;
-        }
-
-
     }
 
+    @Override
     public void renderHead(IHeaderResponse response) {
         super.renderHead(response);
-        response.render(CssReferenceHeaderItem.forReference(new PackageResourceReference(ChatPage.class, "ChatPage.css")));
+        response.render(CssHeaderItem.forReference(new PackageResourceReference(ChatPage.class, "ChatPage.css")));
     }
 
 }
